tests/baselines/reference/privateNameBadSuperUseDefineForClassFields(target=esnext).errors.txt
privateNameBadSuperUseDefineForClassFields.ts(5,5): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== privateNameBadSuperUseDefineForClassFields.ts (1 errors) ====
    class B {};
    class A extends B {
      #x;
      constructor() {
        this;
        ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        super();
      }
    }
    